Apply Spotless formatting and Checkstyle fixes (formatting only)